# pyffmpegui

./: .gitignore  README.md  app.py  convert.py  main.py  pyproject.toml  requirements.txt  views.py  window.py  window.ui
